--- a/webBlog/src/main/resources/templates/main/home.html
+++ b/webBlog/src/main/resources/templates/main/home.html
@@ -10,6 +10,7 @@
 <link rel="stylesheet" type="text/css" th:href="@{/css/article.css}" />
 </head>
 <body>
+<form action="blogform" method="post">
 <th:block th:insert="common/leftmenu :: leftsidemenuFragment"></th:block>
 <main class="main-inner">
     <div class="mainarea">
@@ -31,5 +32,6 @@
 	    </div>
     </div>
 </main>
+</form>
 </body>
 </html>
