--- a/webBlog/src/main/resources/templates/common/category.html
+++ b/webBlog/src/main/resources/templates/common/category.html
@@ -6,7 +6,7 @@
 		<h3>カテゴリ</h3>
 		<ul>
 			<li class="link" th:each="cate: ${categoryList}">
-   			    <a th:href="@{'/category?get='+${cate.encParam}}" th:text="${cate.name}"></a>
+   			    <a th:href="@{'/category?pageid='+${cate.id}+'&type='+${cate.type}}" th:text="${cate.name}"></a>
 			</li>
 		</ul>
 	</th:block>
