--- a/webBlog/src/main/resources/static/css/mobile/article.css
+++ b/webBlog/src/main/resources/static/css/mobile/article.css
@@ -5,7 +5,6 @@
     text-align:left;
     font-size: 100%;
     height: 100%;
-    margin-top: 40px;
     margin-bottom: 5px;
     padding: 0px;
     display: inline-grid; 
@@ -20,7 +19,7 @@
     border-radius: 5px;
     font-size: 100%;
     height: 100%;
-    margin-left: auto;
+    margin-left: 15px;
     margin-right: auto;
     margin-top: 10px;
     margin-bottom: 5px;
