--- a/webBlog/src/main/resources/templates/common/archive.html
+++ b/webBlog/src/main/resources/templates/common/archive.html
@@ -6,7 +6,7 @@
         <h3>アーカイブ</h3>
         <ul>
             <li class="link" th:each="lang: ${languageList}">
-                <a th:href="@{'/category?get='+${lang.encParam}}" th:text="${lang.name}"></a>
+                <a th:href="@{'/category?pageid='+${lang.id}}" th:text="${lang.name}"></a>
             </li>
         </ul>
     </th:block>
