--- a/webBlog/src/main/resources/templates/common/content.html
+++ b/webBlog/src/main/resources/templates/common/content.html
@@ -6,7 +6,7 @@
         <h3>コンテンツ</h3>
         <ul>
             <li class="link" th:each="content: ${contentList}">
-                <a th:href="@{'/content?get='+${content.encParam}}" th:text="${content.name}"></a>
+                <a th:href="@{'/content?pageid='+${content.id}}" th:text="${content.name}"></a>
             </li>
         </ul>
     </th:block>
