--- a/webBlog/src/main/resources/templates/common/leftmenu.html
+++ b/webBlog/src/main/resources/templates/common/leftmenu.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <body>
-    <div class="leftmenu" th:fragment="leftsidemenuFragment">
+    <nav id="leftmenu" class="leftmenu is-active" th:fragment="leftsidemenuFragment">
         <th:block th:insert="common/header :: headerFragment"></th:block>
         <div class="category" th:insert="common/category :: categoryFragment"></div>
         <div class="language" th:insert="common/language :: languageFragment"></div>
 	    <div class="content" th:insert="common/content :: contentFragment"></div>
-    </div>
+        <div class="exercises" th:insert="common/exercises :: exercisesFragment"></div>
+    </nav>
 </body>
 </html>
